mobile wrap ui fix (#765)
1. Small change making approve button extend to 100% of width
2. Switch mobile view on wrap ui to align to left of parent box

--- a/src/views/Stake/stake.scss
+++ b/src/views/Stake/stake.scss
@@ -100,6 +100,7 @@
   .stake-index {
     align-items: flex-start;
   }
+    text-align: left;
 }
 
 .ohm-logo-tiny {
